Fixed Mod Icon in post footer not showing

--- a/src/app/components/post/Post.module.css
+++ b/src/app/components/post/Post.module.css
@@ -4,10 +4,9 @@
     font-size: 14px;
     line-height: 21px;
     margin: 0px;
-    width: 40%;
+    width: 100%;
     color: rgb(42, 60, 66);
     border-radius: 16px;
-    margin-left: 200px;
 }
 
 .post:hover {
