--- a/src/app/components/post/PostFooter.module.css
+++ b/src/app/components/post/PostFooter.module.css
@@ -15,7 +15,6 @@
     align-items: center;
     width: 100%;
     position: relative;
-    overflow: hidden;
 }
 
 .post_interactions{
@@ -42,7 +41,6 @@
     font-weight: 600;
     padding-left: 10px;
     padding-right: 10px;
-    
 }
 
 .mod_interactions:hover{
@@ -93,6 +91,7 @@
 .btn:hover{
     background-color: #E2E7E9;
 }
+
 
 
 
